panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__generic__test_generic_selection.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/generic/test_generic_selection.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/generic/test_generic_selection.c"
   (function-definition
      main~0 `fn() -> int`
      (compound-statement
         (return (42 `int`)))))

----- stderr -----
